<resources>
    <string name="app_name">squareBracket</string>
    <string name="title_activity_first">MainActivity</string>
    <string name="title_last_videos">Home</string>
    <string name="title_featured">Explore</string>
    <string name="title_my_profile">Me</string>
    <string name="placeholder_desc">Dear Peanut, what the hell is wrong with you?</string>
    <string name="placeholder_uploader">Marshal</string>
    <string name="placeholder_title">An Unexpected Invitation</string>
    <string name="placeholder_logged">Gamerappa</string>
    <string name="placeholder_joined">Joined 5 months ago</string>
    <string name="my_favorites">My favorites</string>
    <string name="title_community">Community</string>
</resources>