<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_last_videos">

    <fragment
        android:id="@+id/navigation_last_videos"
        android:name="com.gamerappa.squarebracket.ui.last_videos.lastVideosFragment"
        android:label="@string/title_last_videos"
        tools:layout="@layout/fragment_last_videos" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.gamerappa.squarebracket.ui.home.HomeFragment"
        android:label="@string/title_featured"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.gamerappa.squarebracket.ui.notifications.NotificationsFragment"
        android:label="@string/title_my_profile"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/navigation_community"
        android:name="com.gamerappa.squarebracket.ui.community.CommunityFragment"
        android:label="@string/title_my_profile"
        tools:layout="@layout/fragment_notifications" />
</navigation>